@@ -26,7 +26,7 @@
 @HEADER	HTAGS,4,Jul 2002,GNU Project
 @NAME	htags - generate hypertext from source code.
 @SYNOPSIS
-	@name{htags} [-a][-c][-f][-F][-g][-m][-n][-o][-s][-v][-w][-d @arg{dir}][-S @arg{dir}][-t @arg{title}][@arg{dir}]
+	@name{htags} [-a][-c][-D][-f][-F][-g][-m][-n][-o][-s][-v][-w][-d @arg{dir}][-S @arg{dir}][-t @arg{title}][@arg{dir}]
 @DESCRIPTION
 	@name{Htags} makes hypertext from C, C++, Yacc and Java source code.
 
@@ -50,6 +50,9 @@
 		You need to set up an HTTP server so that @xref{gzip,1}
 		is invoked for each compressed file.
 		See @file{HTML/.htaccess} that is generated by htags.
+	@item{@option{-D}, @option{--dynamic}}
+		Generate object list dynamically using CGI program.
+		By default, object list is generated statically.
 	@item{@option{-d}, @option{--dbpath} @arg{dir}}
 		Specifies the directory in which @file{GTAGS} and @file{GRTAGS}
 		exist. The default is the current directory.
@@ -148,6 +151,8 @@
 		Begin tag for comments. The default is '<I><FONT COLOR=green>'.
 	@item{@code{comment_end}(string)}
 		End tag for comments. The default is '</FONT></I>'.
+	@item{@code{dynamic}(bool)}
+		Generate object list dynamically.
 	@item{@code{sharp_begin}(string)}
 		Begin tag for 'define'. The default is '<FONT COLOR=darkred>'.
 	@item{@code{sharp_end}(string)}
